@@ -556,15 +556,8 @@ SCIP_RETCODE SCIPtransformProb(
 
    if( scip->set->misc_estimexternmem )
    {
-      if( scip->set->limit_memory < (SCIP_Real)SCIP_MEM_NOLIMIT )
-      {
-         SCIP_Longint memused = SCIPgetMemUsed(scip);
-
-         /* if the memory limit is set, we take 1% as the minimum external memory storage */
-         scip->stat->externmemestim = MAX(memused, (SCIP_Longint) (0.01 * scip->set->limit_memory * 1048576.0));
-      }
-      else
-         scip->stat->externmemestim = SCIPgetMemUsed(scip);
+      /* the following formula was estimated empirically using linear regression */
+      scip->stat->externmemestim = (SCIP_Longint) (MAX(1, 8.5e-04 * SCIPgetNConss(scip) + 7.6e-04 * SCIPgetNVars(scip) + 3.5e-05 * scip->stat->nnz) * 1048576.0);
       SCIPdebugMsg(scip, "external memory usage estimated to %" SCIP_LONGINT_FORMAT " byte\n", scip->stat->externmemestim);
    }
 
